2021-08-21  Per Arne  <pvollan@apple.com>

        [Win] The layout test fast/visual-viewport/resize-event-fired-window-resized.html is a flaky timeout
        https://bugs.webkit.org/show_bug.cgi?id=229379

        Unreviewed test gardening.

        * platform/win/TestExpectations:

2021-08-21  Per Arne  <pvollan@apple.com>

        [Win] The layout test http/tests/websocket/tests/hybi/inspector/send-and-recieve-debugger.html is timing out
        https://bugs.webkit.org/show_bug.cgi?id=229372

        Unreviewed test gardening.

        * platform/win/TestExpectations:

2021-08-21  Myles C. Maxfield  <mmaxfield@apple.com>

        [Cocoa] Single characters don't get shaped in the fast text codepath
        https://bugs.webkit.org/show_bug.cgi?id=186804

        Reviewed by Alan Bujtas.

        Huge thanks to Laurence Penney to contributing this test font!!!

        * fast/text/resources/UniversTofu-GSUB-rvrn.ttf: Added. The license is Apache 2.0.
        * fast/text/single-character-shaping-expected.html: Added.
        * fast/text/single-character-shaping.html: Added.

2021-08-21  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Enable Array#findLast method
        https://bugs.webkit.org/show_bug.cgi?id=229355

        Reviewed by Saam Barati.

        * inspector/model/remote-object-get-properties-expected.txt:
        * js/Object-getOwnPropertyNames-expected.txt:
        * js/array-unscopables-properties-expected.txt:
        * js/script-tests/Object-getOwnPropertyNames.js:
        * js/script-tests/array-unscopables-properties.js:

2021-08-21  Youenn Fablet  <youenn@apple.com>

        Prevent AudioSession category from moving out of PlayAndRecord too quickly
        https://bugs.webkit.org/show_bug.cgi?id=229327
        <rdar://81997024>

        Reviewed by Eric Carlson.

        * http/tests/media/media-stream/audio-capture-and-category.https-expected.txt: Added.
        * http/tests/media/media-stream/audio-capture-and-category.https.html: Added.
