@@ -18,8 +18,8 @@ Tests that the placeholder text is repainted when the caps lock indicator is hid
   (rect 16.50 55.50 37 17)
   (rect 13.50 54 43 20)
   (rect 16.50 57 37 14)
-  (rect 13.50 54 26 20)
-  (rect 16.50 57 20 14)
+  (rect 33.50 54 23 20)
+  (rect 36.50 57 17 14)
   (rect 13.50 54 43 20)
   (rect 16.50 57 37 14)
 )
