@@ -1,3 +1,12 @@
+2021-08-21  Alan Bujtas  <zalan@apple.com>
+
+        [IFC][Integration] Enable modern line layout for placeholder elements
+        https://bugs.webkit.org/show_bug.cgi?id=228887
+
+        Reviewed by Antti Koivisto.
+
+        * platform/ios-wk2/fast/repaint/placeholder-after-caps-lock-hidden-expected.txt:
+
 2021-08-21  Per Arne  <pvollan@apple.com>
 
         [Win] The layout test fast/visual-viewport/resize-event-fired-window-resized.html is a flaky timeout
